@@ -30,8 +30,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.core.Output;
  * import io.muehlbachler.pulumi.proxmoxve.HostsLegacy;
  * import io.muehlbachler.pulumi.proxmoxve.HostsLegacyArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -45,9 +45,9 @@ import javax.annotation.Nullable;
  *     public static void stack(Context ctx) {
  *         var firstNodeHostEntries = new HostsLegacy("firstNodeHostEntries", HostsLegacyArgs.builder()
  *             .nodeName("first-node")
- *             .entries(List.of(Map.ofEntries(
+ *             .entries(Arrays.asList(Map.ofEntries(
  *                 Map.entry("address", "127.0.0.1"),
- *                 Map.entry("hostnames", List.of(                
+ *                 Map.entry("hostnames", Arrays.asList(                
  *                     "localhost",
  *                     "localhost.localdomain"))
  *             )))
